New update - Added glowing for vet scissors - Added stats books for players to check statistic of horse - Deleted command horse despawn - Added command for horse stats (when player sitting on horse can write /horse stats) - Added traits showing in stats (TODO: upgrades in NPC)